# Queseria-Support

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processwindow.cpp  processwindow.h  processwindow.ui  resources.qrc  settingwindow.cpp  settingwindow.h  settingwindow.ui
include/: checkCookie.h  classOrderInfo.h  deleteExcessId.h  isItCorrect.h  mytextedit.h  parseFunpay.h  startWork.h  supportAppeal.h  workWithCout.h
src/: checkCookie.cpp  classOrderInfo.cpp  deleteExcessId.cpp  isItCorrect.cpp  parseFunpay.cpp  startWork.cpp  supportAppeal.cpp  workWithCout.cpp
